--- a/Test2.html
+++ b/Test2.html
@@ -3,7 +3,10 @@
     <head>
         <title>Test</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <style>
+            .in { background-color: green;}
+            .out { background-color: red;}
+        </style>
     </head>
     <body>
         <h1>Hello Familly</h1>
