--- a/Test2.html
+++ b/Test2.html
@@ -4,8 +4,8 @@
         <title>Test</title>
         <meta charset="utf-8">
         <style>
-            .in { background-color: green;}
-            .out { background-color: red;}
+            .in { display: block; background-color: green;}
+            .out { display: block; background-color: red;}
         </style>
     </head>
     <body>
