--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         
         <div class="li-ops">
             <li>
-                <span class="title">The first option in the list</span>
+                <span class="title">Some useful Tips here</span>
             
                 <toggle-button class="first-opt" title="first"></toggle-button>
 
-                <div class="descript">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore quibusdam pariatur iste repudiandae modi alias cum atque maiores ab consectetur molestiae quisquam temporibus praesentium explicabo accusantium, saepe eligendi. Quos, ex.</div>
+                <div class="descript">When you left mouse click on the close cross botton, this window will disapear. if you wish to get it back you should press the <span class="matn">Enter</span> key on your keyboard.</div>
             </li>
             <li>
                 <span class="title">Nothing special about this</span>
