--- a/Test2.html
+++ b/Test2.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <h1>Hello Familly</h1>
+        <h2>Note: Reading and writing JSON only works in an HTTP SERVER</h2>
         <div id="ajax"></div>
         <script>
             const xhr = new XMLHttpRequest();
