--- a/selectors.html
+++ b/selectors.html
@@ -16,6 +16,9 @@
       body,
       html {
         min-height: 100%;
+        
+      }
+      body{
         background-color: #ebdfcd;
         padding: 1em;
       }
