--- a/tabbed-menu/index.html
+++ b/tabbed-menu/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
