--- a/searchbar.html
+++ b/searchbar.html
@@ -247,7 +247,7 @@
       }
     </style>
   </head>
-  <body class="">
+  <body class="darkmode">
     <div class="container">
       <h1>Searchbar</h1>
       <br />
