--- a/searchbar.html
+++ b/searchbar.html
@@ -14,13 +14,17 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&display=swap" rel="stylesheet">
     <style>
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: "Noto Sans", sans-serif;
+        /* font-family: "Noto Sans", sans-serif; */
         transition: all 0.2s;
+font-family: "Baloo Bhaijaan 2", sans-serif;
       }
 
       html,
