--- a/searchbar.html
+++ b/searchbar.html
@@ -14,17 +14,13 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&display=swap" rel="stylesheet">
-    <style>
+<style>
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        /* font-family: "Noto Sans", sans-serif; */
+        font-family: "Noto Sans", sans-serif; 
         transition: all 0.2s;
-font-family: "Baloo Bhaijaan 2", sans-serif;
       }
 
       html,
@@ -55,7 +51,7 @@ font-family: "Baloo Bhaijaan 2", sans-serif;
       .searchbar-wrapper {
         position: relative;
         background-color: #fff;
-        min-width: 250px;
+        min-width: 300px;
         width: 100%;
         height: 3em;
         display: flex;
@@ -74,7 +70,7 @@ font-family: "Baloo Bhaijaan 2", sans-serif;
       }
       /* ******************************** */
       .searchbar-wrapper .search-button {
-        min-width: 90px;
+        min-width: 95px;
         border-radius: 3px 0 0 3px;
         border: none;
         transition: all 0.2s;
