--- a/js-range-mapping/index.html
+++ b/js-range-mapping/index.html
@@ -14,6 +14,9 @@
       media="(prefers-color-scheme: dark)"
     />
     <title>Value range mapping</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <style>
       /*************************************
       document object css variables
